namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-opg-actor-search-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-platform-app-opg-actor-search-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "opg-deds"
    cloud-platform.justice.gov.uk/application: "Search Sirius Database for Actor Details"
    cloud-platform.justice.gov.uk/owner: "DEDS: OPG Data Science: kate.bailey@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/opg-actor-search"
    cloud-platform.justice.gov.uk/team-name: "opg-team-rich"
    cloud-platform.justice.gov.uk/review-after: ""
